syntax = "proto3";

package library.v1;

option go_package = "proto/library_proto/transport/grpc;librarygrpc";



message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 pages = 4;
  string edition = 5;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message CreateBookRequest {
  Book book = 1;
}

message CreateBookResponse {
  Book book = 1;
}

// ====== Service ======

service LibraryService {
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
}
